tests/parser/validinput/comments.idp
/*
blabla
/*

*/

/***
 * /*
 */
vocabulary /*testje*/ A{ 
	type x // blablabla
}

procedure main(){
	result = -1
//	return 0
	result = result+1
	//	return 0
/*
	return 0
*/
-- 	return 0
	result = result+1 // return 0
	return result
}
