tests/parser/invalidinput/emptyfuncint.idp
vocabulary V{
	type x
	type y
	f(y):x
}
structure S:V{
	y = {A}
	f = {}
}
procedure main(){
	return 1	
}
